Refs #8671; use same title as the video pop-up since it is cut to avoid having the item detail title too long

--- a/src/eea/mediacentre/skins/eea_multimedia/eea.multimedia.css
+++ b/src/eea/mediacentre/skins/eea_multimedia/eea.multimedia.css
@@ -350,12 +350,12 @@ ul, ul li {
 }
 
 #featured-location .portletFooter {
-    padding: 0.5em;
+    padding: 0em 0.5em;
 }
 #featured-location .featured-description {
     overflow: auto;
-    height: 160px;
-    min-height: 160px;
+    height: 145px;
+    min-height: 145px;
     max-height: 180px;
     margin-bottom: 0.7em;
 }
